src/objects/CBNonFinancialLibrary__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>NFL-{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LayerTitle__c</fullName>
        <formula>Layer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Layer</label>
        <referenceTo>CBLayer__c</referenceTo>
        <relationshipName>NonfinancialLibraries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SingleValue__c</fullName>
        <label>Single Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&apos;Static&apos;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>TEXT(Layer__r.Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <label>CB Non-Financial Library</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Index__c</columns>
        <columns>Layer__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Non-Financial Libraries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>